DIS-966 fix article header alignment

--- a/ui.apps/sass/partials/_articleHeader.scss
+++ b/ui.apps/sass/partials/_articleHeader.scss
@@ -29,61 +29,72 @@
     }
   }
 
-  &_author {
+  &_info{
     padding-top: 25px;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    row-gap: 3px;
+    align-items: center;
 
     @include respond(md) {
       padding-top: 20px;
     }
 
     @include respond(xl) {
-      display: none;
-    }
-
-    &-image {
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-    }
-
-    &-description {
-      display: inline-block;
-      vertical-align: middle;
-      padding-left: 5px;
-      font-size: 12px;
-      line-height: 17px;
-      color: map-get($palette, dhl-black);
-      opacity: 0.7;
-
-      &__name {
-        font-size: 14px;
-        font-weight: bold;
-      }
-
-      &__follow {
-        padding-left: 15px;
-        text-decoration: underline;
-        color: map-get($palette, scarlet);
-        opacity: 1;
-
-        &:hover {
-          color: map-get($palette, scarlet);
-        }
-      }
-    }
-
-    &.article-footer {
       display: block;
+    }
+ }
+
+  &_author-image {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 8px;
+
+    @include respond(xl) {
+      display: none;
     }
   }
 
-  &_date {
-    margin-left: 36px;
-    padding-top: 3px;
+  &_author-description {
+    display: inline-block;
+    vertical-align: middle;
     font-size: 12px;
     line-height: 17px;
     color: map-get($palette, dhl-black);
     opacity: 0.7;
+    grid-column: 2;
+    grid-row: 1;
+
+    @include respond(xl) {
+      display: none;
+    }
+
+    &__name {
+      font-size: 14px;
+      font-weight: bold;
+    }
+
+    &__follow {
+      padding-left: 15px;
+      text-decoration: underline;
+      color: map-get($palette, scarlet);
+      opacity: 1;
+
+      &:hover {
+        color: map-get($palette, scarlet);
+      }
+    }
+
+  }
+
+  &_date {
+    font-size: 12px;
+    line-height: 17px;
+    color: map-get($palette, dhl-black);
+    opacity: 0.7;
+    grid-column: 2;
+    grid-row: 2;
 
     @include respond(xl) {
       margin-left: 0;
